redirect to asset page for published assets in dashboard, fixed select areas z-index bug

--- a/src/assets/styles/_cataloguesingle-selectareas.scss
+++ b/src/assets/styles/_cataloguesingle-selectareas.scss
@@ -1,6 +1,5 @@
 .select-area-modal {
-  margin-top: 85px;
-  height: calc(100% - 85px);
+  height: 100%;
   width: 100%;
   background: $lightBgColor;
   border: solid 2px $secondColor;
